@@ -25,8 +25,9 @@ typedef enum edgex_propertytype
   Edgex_Float64 = IOT_DATA_FLOAT64,
   Edgex_Bool = IOT_DATA_BOOL,
   Edgex_String = IOT_DATA_STRING,
+  Edgex_Unused1 = IOT_DATA_NULL,
   Edgex_Binary = IOT_DATA_ARRAY,
-  Edgex_Unused1 = IOT_DATA_MAP,
+  Edgex_Object = IOT_DATA_MAP,
   Edgex_Unused2 = IOT_DATA_VECTOR,
   Edgex_Int8Array,
   Edgex_Uint8Array,
